--- a/src/styles.css
+++ b/src/styles.css
@@ -27,10 +27,12 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: auto;
 }
 
 #root {
   width: 100%;
   height: 100vh;
+  overflow: auto;
 }
 
